--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -2,9 +2,7 @@ name: Build and upload docker images
 
 on:
   push:
-    branches: [ master, openvas-scanner-20.08, openvas-scanner-21.04 ]
-  pull_request:
-    branches: [ master, openvas-scanner-20.08, openvas-scanner-21.04 ]
+    branches: [ master, openvas-scanner-20.08, openvas-scanner-21.04, middleware ]
 
 jobs:
   upload-testing:
